# monorepo

./: .gitattributes  .gitignore  .lfsconfig  .replit  Cargo.toml  Cast.toml  ISSUES.md  LICENSE.md  README.md  REPOSITORY_STRUCTURE.md  cast  claude.md  librust_out.rlib
(projects)/luggage/: Cargo.toml  ISSUES.md  README.md
(projects)/luggage/docs/architecture/: README.md
(projects)/luggage/docs/presentations/: slides.md
(projects)/luggage/docs/presentations/pitch/: slides.md
(projects)/luggage/docs/presentations/pitch/slides/: nexus-quote.md  problem.md
(projects)/luggage/docs/resources/: README.md  _Each day billions of us conduct numerous transactions with the tech giants [...]. - Slidev.html
(projects)/luggage/docs/resources/_Each day billions of us conduct numerous transactions with the tech giants [...]. - Slidev_files/: css2  main.ts
(projects)/luggage/src/: error.rs  main.rs
(projects)/luggage/src/bellhop/: bellhop.rs  mod.rs  startup.rs
(projects)/luggage/src/closet/: closet.rs
(projects)/luggage/src/closet/providers/: surrealdb.rs
(projects)/luggage/src/cube/: cube.rs  mod.rs
(projects)/luggage/src/cube/providers/resume/: experience.rs
(projects)/luggage/src/item/: item.rs
(projects)/luggage/src/provider/: abstractions.rs  mod.rs  surrealdb.rs
(projects)/luggage/tests/assets/: test_config.json
.github/: WORKFLOW_CONVENTIONS.md  copilot-instructions.md  dependabot.yml
agent-copilot/: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md
agent-copilot/artifacts/aarch64-apple-darwin/: agent-copilot
agent-copilot/prompts/: start-a-new-task.md
agent-copilot/src/: main.rs
agent-copilot/tests/: build_artifacts_test.rs
assets/: README.md
athenaeum/: Cast.toml  README.md
auth_sdk/: Cargo.toml  ISSUES.md  README.md
binary/: Cargo.toml
blueeel/: Cargo.toml  Cast.toml
bogan/: Cast.toml  README.md
cahokia/: Cargo.toml  Cast.toml  ISSUES.md  README.md
cahokia/cloudflare/: .gitignore  Cargo.toml  Cast.toml  ISSUES.md  README.md  deploy.sh  wrangler.toml
cahokia/cloudflare/tests/: integration_tests.rs
cahokia/core/: ISSUES.md
cahokia/core/src/: lib.rs
cahokia/desktop/: Cargo.toml
cahokia/desktop/src/: main.rs
cahokia/mobile/: Cargo.toml
cahokia/mobile/src/: main.rs
cahokia/ui/: Cargo.toml
cahokia/ui/assets/styling/: hero.css  navbar.css  sidebar.css
cahokia/ui/src/: hero.rs  lib.rs  sidebar.rs
cahokia/web/: .gitignore  Cargo.toml  Dioxus.toml  ISSUES.md  README.md  RELEASES.toml  bundle.sh  package-lock.json  package.json  playwright.config.ssg.ts  playwright.config.ts
cahokia/web/assets/: main.css
cahokia/web/assets/styling/: header.css
cahokia/web/src/: main.rs
cahokia/web/src/views/: about.rs  explore.rs  history.rs  mod.rs
cahokia/web/tests/: README.md  earthy-colors.spec.ts  example-ssg.spec.ts  example.spec.ts  sidebar.spec.ts  smoke-test.spec.ts  ssg-bundle.spec.ts
cahokia/web/tests/fixtures/: README.md  ssg-server.ts
cahokia_web_cloudflare/: Cargo.toml  Cast.toml  ISSUES.md  README.md  deploy.sh  wrangler.toml
cast/: Cargo.toml  ISSUES.md  README.md  WORKSPACE_RESTRUCTURING_DEPENDENCIES.md  WORKSPACE_RESTRUCTURING_MIGRATION_PLAN.md
cast/examples/: load_config.rs
cast/src/: args.rs  build.rs  cd.rs  ci.rs  config.rs  deploy.rs  dev.rs  lib.rs  projects.rs  run.rs  serve.rs  sessions.rs  test.rs  utils.rs
cast_cli/: Cargo.toml
cast_vscode/: Cast.toml  README.md  package-lock.json
ciam/: Cargo.toml  Cast.toml
cookbook/: Cargo.toml  Cast.toml  ISSUES.md  README.md
cookbook-cloudflare/: Cargo.toml  Cast.toml  ISSUES.md  README.md  deploy.sh  wrangler.toml
cookbook/web/: .gitignore  Cargo.toml  Cast.toml  ISSUES.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
cookbook/web/assets/styling/: header.css  home.css  navbar.css  sidebar.css
cookbook/web/playwright-report/: index.html
cookbook/web/src/: main.rs
cookbook/web/tests/: README.md  auth-navbar.spec.ts  header-navigation.spec.ts  home-navigation.spec.ts  routing.spec.ts  sidebar.spec.ts
cookbook_web/: Cargo.toml  Dioxus.toml  ISSUES.md  README.md
dioxus_ssg/: Cargo.toml  Cast.toml
dioxus_static_website/: Cargo.toml
docs/: README.md  index.html
example/: Cargo.toml  Cast.toml  README.md
infrastructure/: ISSUES.md
luggage/: Cargo.toml  README.md
luggage/crates/: README.md
luggage/docs/presentations/pitch/: package-lock.json  package.json  tsconfig.json
luggage/docs/presentations/pitch/slides/: introducing.md
luggage/examples/webapp/: Cargo.toml
luggage/src/: error.rs
luggage/src/bellhop/: bellhop.rs  mod.rs  startup.rs
luggage/src/closet/: closet.rs  mod.rs
luggage/src/closet/providers/: surrealdb.rs
luggage/src/core/: mod.rs
luggage/src/cube/: cube.rs  mod.rs
luggage/tests/assets/: test_config.json
macos/: README.md
monorepo/: Cargo.toml  Cast.toml  ISSUES.md  README.md
pane-cloudflare/: .gitignore  Cargo.toml  Cast.toml  ISSUES.md  README.md  (+2 more)
projects/agent-copilot/: Cargo.toml  Cross.toml  IMPLEMENTATION.md  ISSUES.md  README.md  build-linux.sh
projects/agent-copilot/artifacts/: agent-copilot
projects/agent-copilot/prompts/: start-a-new-task.md
projects/agent-copilot/src/: main.rs
projects/agent-copilot/tests/: build_artifacts_test.rs
projects/auth_sdk/: Cargo.toml
projects/auth_sdk/src/: web.rs
projects/cahokia/: Cargo.toml  ISSUES.md
projects/cahokia/api/: Cargo.toml
projects/cahokia/api/artifacts/x86_64-unknown-linux-gnu/: api
projects/cahokia/api/src/: main.rs
projects/cahokia/auth/: Cargo.toml
projects/cahokia/auth/src/: authorization_flow.rs  lib.rs  web.rs
projects/cahokia/desktop/: Cargo.toml
projects/cahokia/desktop/src/: main.rs
projects/cahokia/mobile/: Cargo.toml
projects/cahokia/mobile/src/: main.rs
projects/cahokia/ui/: Cargo.toml
projects/cahokia/ui/src/: hero.rs  navbar.rs
projects/cahokia/web/: Cargo.toml  bundle.sh
projects/cahokia/web/src/: main.rs
projects/cahokia/web/src/views/: login.rs  login_cahokia.rs  login_cahokia_code.rs  mod.rs
proof_of_concepts/dioxus/ssg/: Cargo.toml
(+195 files in other folders)
