[workspace]
resolver = "2"
members = ["cloudflare", "core", "desktop", "mobile", "ui", "web"]
default-members = ["core", "ui", "web"]

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
dioxus = { version = "0.7.2" }
thiserror = "2.0.12"
tracing = "0.1.41"
auth_sdk = { path = "../auth_sdk" }

# workspace
core = { path = "core" }
ui = { path = "ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
