[package]
name = "cast"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tiny_http = "0.12.0"
toml = "0.8"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempdir = "0.3.7"
