[package]
name = "ssg"
version = "0.1.0"
authors = ["Jim Hill <jim.hill.r@gmail.com>"]
edition = "2024"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[lints.rust]
unsafe_code = "forbid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0-alpha.4", features = [
    "static-generation",
    "router",
] }
tracing-subscriber = "0.3.18"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
