[package]
name = "luggage"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.8.7"
axum-test = "17.3.0"
convert_case = "0.10.0"
futures = "0.3.31"
schemars = "1.1.0"
semver = "1.0.27"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "2.2.8", features = ["kv-mem"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
urn = { version = "0.7.0", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
