[package]
name = "luggage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-test = "17.2.0"
convert_case = "0.7.1"
futures = "0.3.31"
schemars = "0.8.21"
semver = "1.0.25"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.138"
surrealdb = { version = "2.0.4", features = ["kv-mem"] }
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
urn = { version = "0.7.0", features = ["serde"] }
uuid = { version = "1.13.1", features = ["v7"] }
