[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
auth_sdk = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]

[package.metadata.cast]
framework = "dioxus"
deploys = ["cloudflare"]
