[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["web", "router"] }
auth_sdk = { workspace = true }

[features]
default = ["web"]
web = []

[package.metadata.cast]
project_type = "static_website"
framework = "dioxus"
deploys = ["cookbook-cloudflare"]
