[package]
name = "auth_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
thiserror = "2.0.17"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.26" }
web-sys = { version = "0.3.77", features = [
    "Location",
    "Storage",
    "UrlSearchParams",
    "Window",
] } # TODO: This dep should only exist in web
serde = "1.0.228"
serde_json = "1.0.145"
