[workspace]
resolver = "2"
members = ["core", "desktop", "mobile", "ui", "web"]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
thiserror = "2.0.12"
tracing = "0.1.41"
auth_sdk = { path = "../auth_sdk" }

# workspace
core = { path = "core" }
ui = { path = "ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
