[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
oauth2 = { workspace = true, features = ["reqwest"] }
web-sys = { workspace = true, features = [
    "Storage",
    "Window",
] } # TODO: This dep should only exist in web
serde = "1.0.219"
serde_json = "1.0.140"
